<!-- res/values/strings.xml -->
<resources>
    <string name="app_name">My Application</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="about_me">About me</string>
    <string name="change_user_name">Change Username</string>
    <string name="username">Username</string>
    <string name="user_info">User Info</string>
    <string name="insert_old_password">Insert Old Password</string>
    <string name="insert_new_password">Insert New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="default_notification_channel_id">noti_fcm</string>
    <string name="default_notification_channel_name">fcm</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="social_media">Social Media</string>
    <string name="about">Senior Intern</string>
</resources>
