<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.activity.ChangePasswordActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="118dp"
    tools:layout_editor_absoluteY="199dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@color/cardBackgroundColor"
        app:cardElevation="4dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
         >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"

                >
                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="45dp"

                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="left"
                    android:paddingRight="20dp"
                    app:tint="@color/purple" />

                <TextView
                    android:id="@+id/change_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center_vertical"
                    android:text="@string/change_password"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/insert_old_password"></TextView>
            <EditText
                android:id="@+id/text_input_old_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="Old Password"
                android:background="@drawable/custom_edittext"
                android:inputType="textPassword"
                android:padding="8dp"
                android:rotationX="2"
                android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="@color/textColor"
            android:text="@string/insert_new_password"></TextView>

        <EditText
            android:id="@+id/text_input_new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="New Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:rotationX="2"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="@color/textColor"
            android:text="@string/confirm_new_password"></TextView>

        <EditText
            android:id="@+id/text_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="confirm New Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:rotationX="2"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:paddingHorizontal="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="Change Password"
        android:textSize="18sp"
        app:cornerRadius="40dp" />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>